added alternate getConeFaces for the non-simplicial case

--- a/makeSimplicialDraft.ipynb
+++ b/makeSimplicialDraft.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "reduced-arabic",
    "metadata": {},
    "outputs": [
     {
@@ -22,13 +21,13 @@
    "source": [
     "import Pkg\n",
     "Pkg.add(\"Oscar\")\n",
-    "Pkg.add(\"Polymake\")"
+    "Pkg.add(\"Polymake\")\n",
+    "Pkg.add(\"Combinatorics\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "handed-statement",
    "metadata": {
     "scrolled": true
    },
@@ -55,13 +54,13 @@
    ],
    "source": [
     "using Oscar\n",
-    "using Polymake"
+    "using Polymake\n",
+    "using Combinatorics"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "ahead-opposition",
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +103,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "seasonal-brazil",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +126,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "smoking-accused",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +149,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "pretty-bacon",
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +173,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "intensive-swimming",
    "metadata": {
     "scrolled": true
    },
@@ -204,7 +199,6 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "pressed-pocket",
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +221,6 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "studied-judges",
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +250,6 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "adverse-capture",
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +275,6 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "periodic-floor",
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +299,6 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "christian-prime",
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +322,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "analyzed-appendix",
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +344,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "healthy-california",
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +367,6 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "obvious-inventory",
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +389,6 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "imported-transportation",
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +412,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "dirty-recycling",
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +432,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "reflected-holder",
    "metadata": {},
    "outputs": [
     {
@@ -477,6 +461,11 @@
     "            push!(outCones, subcone)\n",
     "        end\n",
     "    end\n",
+    "    # for subcone in powerset(coneRayIndices, min=1, max=length(a)-1)\n",
+    "        # if (getConeRank(subcone, rayMatrix) == c)\n",
+    "            # push!(outCones, subcone)\n",
+    "    # end\n",
+    "    \n",
     "    return outCones\n",
     "    # This code may be incorrect, since I am not sure whether we\n",
     "    # need to consider subcones missing more than 1 ray\n",
@@ -486,7 +475,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "simplified-sharing",
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +530,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "identified-guest",
    "metadata": {},
    "outputs": [],
    "source": []
