--- a/toric_blowup.ipynb
+++ b/toric_blowup.ipynb
@@ -2,8 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "governmental-identifier",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +33,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "least-solid",
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +55,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "selective-nevada",
    "metadata": {},
    "outputs": [
     {
@@ -86,8 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
-   "id": "dominican-notification",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +92,7 @@
        "convertIncidenceMatrix (generic function with 1 method)"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,8 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
-   "id": "national-gilbert",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +128,7 @@
        "coneListFormat (generic function with 1 method)"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,8 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
-   "id": "restricted-designer",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +162,7 @@
        "toric_blowup (generic function with 1 method)"
       ]
      },
-     "execution_count": 222,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,14 +170,20 @@
    "source": [
     "function toric_blowup(s, X, v)\n",
     "    coneList = convertIncidenceMatrix(X.MAXIMAL_CONES)\n",
-    "    starIndex = findall((t) -> all(((i) -> i in t).(s)), coneList)\n",
-    "    star = rowMinors(coneList, starIndex)\n",
-    "    rayMatrix = X.RAYS\n",
     "    \n",
+    "    println(coneList)\n",
+    "    \n",
+    "    starIndex = findall((t) -> all(((i) -> i in t).(s)), coneList)\n",
+    "    #star = rowMinors(coneList, starIndex)\n",
+    "    star = [coneList[i] for i in starIndex]\n",
+    "    \n",
+    "    println(star)\n",
+    "    rayMatrix = X.RAYS\n",
     "    #d = size(rayMatrix, 1) #length of array describing each ray\n",
     "    clStar = []\n",
     "    for t in star\n",
     "        c = rank(Array(rowMinors(rayMatrix, t))) - 1\n",
+    "        println(c)\n",
     "        for i in t\n",
     "            subcone = convert.(Int64, filter(elt -> elt != i, t))\n",
     "            #println(subcone)\n",
@@ -193,39 +193,66 @@
     "        end\n",
     "    end\n",
     "    clStar = unique(clStar)\n",
-    "                \n",
-    "    n = size(rayMatrix, 1)\n",
-    "    #coneList = filter(t -> !(t in star), coneList)\n",
-    "    coneList  = rowMinors(coneList, filter(i -> !(i in starIndex), range(1, stop=size(coneList, 1))))\n",
+    "      \n",
+    "    println(clStar)\n",
     "    \n",
-    "    if size(s,2) == 1\n",
+    "    n = size(rayMatrix, 1) + 1\n",
+    "    #coneList = filter(t -> !(t in star), coneList)\n",
+    "    #coneList  = rowMinors(coneList, filter(i -> !(i in starIndex), range(1, stop=size(coneList, 1))))\n",
+    "    coneList = filter(x -> !(x in star), coneList)\n",
+    "    \n",
+    "    print(coneList)\n",
+    "    \n",
+    "    if length(s) == 1\n",
     "        newCones = []\n",
     "        for t in clStar\n",
     "            if !(s[1] in t)\n",
-    "                append!(newCones, [sort(hcat(t..., s...), dims=2)])\n",
+    "                 #append!(newCones, [sort(hcat(t..., s...), dims=2)])\n",
+    "                push!(newCones, sort(push!(t, s[1])))\n",
     "            end\n",
     "        end\n",
-    "        newCones = convert.(Array{Int64,2}, newCones)\n",
     "        println(newCones)\n",
-    "        println(convert.(Array{Int64,1}, coneList))\n",
+    "         #newCones = convert.(Array{Int64,2}, newCones)\n",
+    "         #println(newCones)\n",
+    "         #println(convert.(Array{Int64,1}, coneList))\n",
+    "        println(append!(coneList, newCones))\n",
     "        return fulton.NormalToricVariety(INPUT_RAYS = Array(X.RAYS), INPUT_CONES = append!(coneList, newCones))\n",
     "    end\n",
     "    newCones = []\n",
     "    for t in clStar\n",
     "        if any(((i) -> !(i in t)).(s))\n",
-    "            append!(t, [n])\n",
+    "            push!(newCones, push!(t, n))\n",
     "        end\n",
     "    end\n",
-    "    return fulton.NormalToricVariety(INPUT_RAYS = append!(Array(X.RAYS), [v]), INPUT_CONES = append!(coneList, newCones))\n",
+    "    \n",
+    "    final_rays = [(X.RAYS); v]\n",
+    "    final_cones = append!(coneList, newCones)\n",
+    "    \n",
+    "    print(\"rays: \")\n",
+    "    println(final_rays)\n",
+    "    print(\"cones: \")\n",
+    "    println(final_cones)\n",
+    "    \n",
+    "    return fulton.NormalToricVariety(INPUT_RAYS = final_rays, INPUT_CONES = final_cones)\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "bulgarian-means",
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "toric_blowup (generic function with 2 methods)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "function toric_blowup(s,X)\n",
     "    rays = rowMinors(Array(X.RAYS), s)\n",
@@ -234,8 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "checked-malawi",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +273,7 @@
        "2"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,8 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "cubic-aluminum",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -291,56 +316,81 @@
        "\t-2 1\n"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tv = fulton.NormalToricVariety(INPUT_RAYS=[0 1; 1 0; 0 -1; -2 1]; INPUT_CONES=[[0,1],[1,2],[2,3],[0,3]])"
+    "tv = fulton.NormalToricVariety(INPUT_RAYS=[0 1; 1 0 ; 0 -1; -2 1]; INPUT_CONES=[[1,2],[2,3],[3,4],[0,3]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
-   "id": "absent-puppy",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1 2], [1 4]]\n"
+      "[[1, 2], [2, 3], [3, 4], [1, 4]]\n",
+      "[[2, 3]]\n",
+      "Any[[3], [2]]\n",
+      "[[1, 2], [3, 4], [1, 4]]rays: pm::Matrix<pm::Rational>\n",
+      "0 1\n",
+      "1 0\n",
+      "0 -1\n",
+      "-1 1/2\n",
+      "1 -1\n",
+      "\n",
+      "cones: [[1, 2], [3, 4], [1, 4], [3, 5], [2, 5]]\n"
      ]
     },
     {
-     "ename": "LoadError",
-     "evalue": "\u001b[91mMethodError: no method matching Array{Int64,1}(::LinearAlgebra.Transpose{Int64,Array{Int64,1}})\u001b[39m\n\u001b[91m\u001b[0mClosest candidates are:\u001b[39m\n\u001b[91m\u001b[0m  Array{Int64,1}(::AbstractArray{S,N}) where {T, N, S} at array.jl:562\u001b[39m\n\u001b[91m\u001b[0m  Array{Int64,1}() where T at boot.jl:425\u001b[39m\n\u001b[91m\u001b[0m  Array{Int64,1}(\u001b[91m::UndefInitializer\u001b[39m, \u001b[91m::Int64\u001b[39m) where T at boot.jl:406\u001b[39m\n\u001b[91m\u001b[0m  ...\u001b[39m",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[91mMethodError: no method matching Array{Int64,1}(::LinearAlgebra.Transpose{Int64,Array{Int64,1}})\u001b[39m\n\u001b[91m\u001b[0mClosest candidates are:\u001b[39m\n\u001b[91m\u001b[0m  Array{Int64,1}(::AbstractArray{S,N}) where {T, N, S} at array.jl:562\u001b[39m\n\u001b[91m\u001b[0m  Array{Int64,1}() where T at boot.jl:425\u001b[39m\n\u001b[91m\u001b[0m  Array{Int64,1}(\u001b[91m::UndefInitializer\u001b[39m, \u001b[91m::Int64\u001b[39m) where T at boot.jl:406\u001b[39m\n\u001b[91m\u001b[0m  ...\u001b[39m",
-      "",
-      "Stacktrace:",
-      " [1] convert(::Type{Array{Int64,1}}, ::LinearAlgebra.Transpose{Int64,Array{Int64,1}}) at ./array.jl:554",
-      " [2] _broadcast_getindex_evalf at ./broadcast.jl:648 [inlined]",
-      " [3] _broadcast_getindex at ./broadcast.jl:631 [inlined]",
-      " [4] getindex at ./broadcast.jl:575 [inlined]",
-      " [5] copy at ./broadcast.jl:876 [inlined]",
-      " [6] materialize(::Base.Broadcast.Broadcasted{Base.Broadcast.DefaultArrayStyle{2},Nothing,typeof(convert),Tuple{Base.RefValue{Type{Array{Int64,1}}},LinearAlgebra.Transpose{LinearAlgebra.Transpose{Int64,Array{Int64,1}},Array{Array{Int64,1},2}}}}) at ./broadcast.jl:837",
-      " [7] toric_blowup(::Array{Int64,1}, ::Polymake.BigObjectAllocated, ::Array{Int64,2}) at ./In[222]:34",
-      " [8] top-level scope at In[223]:1",
-      " [9] include_string(::Function, ::Module, ::String, ::String) at ./loading.jl:1091"
-     ]
+     "data": {
+      "text/html": [
+       "<dl> <dt>type</dt><dd> NormalToricVariety</dd> </dl><details><summary>INPUT_CONES</summary><pre>{1 2}\n",
+       "{3 4}\n",
+       "{1 4}\n",
+       "{3 5}\n",
+       "{2 5}</pre></details>\n",
+       "<details><summary>INPUT_RAYS</summary><pre>0 1\n",
+       "1 0\n",
+       "0 -1\n",
+       "-1 1/2\n",
+       "1 -1</pre></details>"
+      ],
+      "text/plain": [
+       "type: NormalToricVariety\n",
+       "\n",
+       "INPUT_CONES\n",
+       "\t{1 2}\n",
+       "\t{3 4}\n",
+       "\t{1 4}\n",
+       "\t{3 5}\n",
+       "\t{2 5}\n",
+       "\n",
+       "INPUT_RAYS\n",
+       "\t0 1\n",
+       "\t1 0\n",
+       "\t0 -1\n",
+       "\t-1 1/2\n",
+       "\t1 -1\n"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "toric_blowup([1], tv, [1 -1])"
+    "toric_blowup([2,3], tv, [1 -1])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "caroline-newfoundland",
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +414,6 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "recorded-elements",
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +454,6 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "widespread-asbestos",
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +478,6 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "operational-furniture",
    "metadata": {},
    "outputs": [
     {
@@ -456,8 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
-   "id": "enhanced-default",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +516,7 @@
        " [3 4]"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,8 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
-   "id": "soviet-johnston",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +537,7 @@
        " 1  2  3"
       ]
      },
-     "execution_count": 190,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,8 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
-   "id": "individual-intro",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +559,7 @@
        " 3  4"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,8 +570,124 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "true"
+      ],
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[[[2, 3], [3, 4]]; [[1 2], [1 4]]] == [[2,3], [3,4], [1 2], [1 4]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "[$1$, $2$]"
+      ],
+      "text/plain": [
+       "2-element Array{Int64,1}:\n",
+       " 1\n",
+       " 2"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sort([2,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "$1$"
+      ],
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "length([1])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "$2$"
+      ],
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "length([1,2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "true"
+      ],
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[[0 1; 1 0; 0 -1] ; [3 5]] == [0 1; 1 0 ; 0 -1; 3 5]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "alleged-helen",
    "metadata": {},
    "outputs": [],
    "source": []
