modified subcones in toric blowup

--- a/toric_blowup.ipynb
+++ b/toric_blowup.ipynb
@@ -2,7 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
+   "id": "average-capture",
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +33,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
+   "id": "excited-clothing",
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +43,7 @@
        "slicematrix (generic function with 1 method)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,7 +56,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
+   "id": "welcome-shift",
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +66,7 @@
        "rowMinors (generic function with 1 method)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +86,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
+   "id": "parental-passage",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +96,7 @@
        "convertIncidenceMatrix (generic function with 1 method)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +123,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
+   "id": "extensive-swedish",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +133,7 @@
        "coneListFormat (generic function with 1 method)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,16 +158,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
+   "id": "embedded-bristol",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "toric_blowup (generic function with 1 method)"
+       "toric_blowup (generic function with 2 methods)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,37 +177,45 @@
     "function toric_blowup(s, X, v)\n",
     "    coneList = convertIncidenceMatrix(X.MAXIMAL_CONES)\n",
     "    \n",
-    "    println(coneList)\n",
+    "    println(\"coneList: \", coneList)\n",
     "    \n",
     "    starIndex = findall((t) -> all(((i) -> i in t).(s)), coneList)\n",
     "    #star = rowMinors(coneList, starIndex)\n",
     "    star = [coneList[i] for i in starIndex]\n",
     "    \n",
-    "    println(star)\n",
+    "    println(\"star: \", star)\n",
     "    rayMatrix = X.RAYS\n",
     "    #d = size(rayMatrix, 1) #length of array describing each ray\n",
+    "    \n",
+    "    lattice = X.HASSE_DIAGRAM\n",
+    "    faces = @Polymake.convert_to Array{Set{Int}} lattice.FACES\n",
+    "    \n",
     "    clStar = []\n",
     "    for t in star\n",
     "        c = rank(Array(rowMinors(rayMatrix, t))) - 1\n",
-    "        println(c)\n",
-    "        for i in t\n",
-    "            subcone = convert.(Int64, filter(elt -> elt != i, t))\n",
-    "            #println(subcone)\n",
-    "            if rank(Array(rowMinors(rayMatrix, subcone))) == c\n",
-    "                append!(clStar, [subcone])\n",
-    "            end\n",
-    "        end\n",
+    "        println(\"c: \", c)\n",
+    "        rank_c_subcone_indices = @Polymake.convert_to Array{Int} Polymake.graph.nodes_of_rank(lattice,c)\n",
+    "        rank_c_subcones = [faces[i+1] for i in rank_c_subcone_indices]\n",
+    "        append!(clStar, [findall((cone -> all((i -> i in t), cone)), rank_c_subcones)])\n",
+    "        \n",
+    "#         for i in t\n",
+    "#             subcone = convert.(Int64, filter(elt -> elt != i, t))\n",
+    "#             #println(subcone)\n",
+    "#             if rank(Array(rowMinors(rayMatrix, subcone))) == c\n",
+    "#                 append!(clStar, [subcone])\n",
+    "#             end\n",
+    "#         end\n",
     "    end\n",
     "    clStar = unique(clStar)\n",
     "      \n",
-    "    println(clStar)\n",
+    "    println(\"clStar: \", clStar)\n",
     "    \n",
     "    n = size(rayMatrix, 1) + 1\n",
     "    #coneList = filter(t -> !(t in star), coneList)\n",
     "    #coneList  = rowMinors(coneList, filter(i -> !(i in starIndex), range(1, stop=size(coneList, 1))))\n",
     "    coneList = filter(x -> !(x in star), coneList)\n",
     "    \n",
-    "    print(coneList)\n",
+    "    println(\"coneList: \", coneList)\n",
     "    \n",
     "    if length(s) == 1\n",
     "        newCones = []\n",
@@ -239,7 +253,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
+   "id": "disabled-defense",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +263,7 @@
        "toric_blowup (generic function with 2 methods)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,31 +276,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "$2$"
-      ],
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a = Array([1 0; 0 1])\n",
-    "rank(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
+   "id": "wired-variety",
    "metadata": {},
    "outputs": [
     {
@@ -316,35 +308,38 @@
        "\t-2 1\n"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tv = fulton.NormalToricVariety(INPUT_RAYS=[0 1; 1 0 ; 0 -1; -2 1]; INPUT_CONES=[[1,2],[2,3],[3,4],[0,3]])"
+    "tv = fulton.NormalToricVariety(INPUT_RAYS=[0 1; 1 0 ; 0 -1; -2 1]; INPUT_CONES=[[0,1],[1,2],[2,3],[0,3]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
+   "id": "enormous-empire",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1, 2], [2, 3], [3, 4], [1, 4]]\n",
-      "[[2, 3]]\n",
-      "Any[[3], [2]]\n",
-      "[[1, 2], [3, 4], [1, 4]]rays: pm::Matrix<pm::Rational>\n",
+      "coneList: [[1, 2], [2, 3], [3, 4], [1, 4]]\n",
+      "star: [[2, 3]]\n",
+      "c: 1\n",
+      "clStar: Any[[3, 4]]\n",
+      "coneList: [[1, 2], [3, 4], [1, 4]]\n",
+      "rays: pm::Matrix<pm::Rational>\n",
       "0 1\n",
       "1 0\n",
       "0 -1\n",
       "-1 1/2\n",
       "1 -1\n",
       "\n",
-      "cones: [[1, 2], [3, 4], [1, 4], [3, 5], [2, 5]]\n"
+      "cones: [[1, 2], [3, 4], [1, 4], [3, 4, 5]]\n"
      ]
     },
     {
@@ -353,8 +348,7 @@
        "<dl> <dt>type</dt><dd> NormalToricVariety</dd> </dl><details><summary>INPUT_CONES</summary><pre>{1 2}\n",
        "{3 4}\n",
        "{1 4}\n",
-       "{3 5}\n",
-       "{2 5}</pre></details>\n",
+       "{3 4 5}</pre></details>\n",
        "<details><summary>INPUT_RAYS</summary><pre>0 1\n",
        "1 0\n",
        "0 -1\n",
@@ -368,8 +362,7 @@
        "\t{1 2}\n",
        "\t{3 4}\n",
        "\t{1 4}\n",
-       "\t{3 5}\n",
-       "\t{2 5}\n",
+       "\t{3 4 5}\n",
        "\n",
        "INPUT_RAYS\n",
        "\t0 1\n",
@@ -379,7 +372,7 @@
        "\t1 -1\n"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,30 +383,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "$1$"
-      ],
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "rank(Polymake.Rational[0 1; 1 0]) - 1"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 113,
+   "id": "genetic-survival",
    "metadata": {},
    "outputs": [
     {
@@ -453,241 +424,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 14,
+   "id": "killing-trash",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "$4$"
+       "[$0$, $1$, $2$, $3$]"
       ],
       "text/plain": [
-       "4"
+       "4-element Array{Int64,1}:\n",
+       " 0\n",
+       " 1\n",
+       " 2\n",
+       " 3"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "s = [0 1 2 3]\n",
-    "size(s, 2)"
+    "append!([0], [1 2 3])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 16,
+   "id": "focused-cylinder",
    "metadata": {},
    "outputs": [
     {
-     "ename": "LoadError",
-     "evalue": "\u001b[91mMethodError: \u001b[0mCannot `convert` an object of type \u001b[92mInt64\u001b[39m\u001b[0m to an object of type \u001b[91mArray{Int64,2}\u001b[39m\u001b[39m\n\u001b[91m\u001b[0mClosest candidates are:\u001b[39m\n\u001b[91m\u001b[0m  convert(::Type{T}, \u001b[91m::AbstractArray\u001b[39m) where T<:Array at array.jl:554\u001b[39m\n\u001b[91m\u001b[0m  convert(::Type{T}, \u001b[91m::T\u001b[39m) where T<:AbstractArray at abstractarray.jl:14\u001b[39m\n\u001b[91m\u001b[0m  convert(::Type{T}, \u001b[91m::LinearAlgebra.Factorization\u001b[39m) where T<:AbstractArray at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.5/LinearAlgebra/src/factorization.jl:55\u001b[39m\n\u001b[91m\u001b[0m  ...\u001b[39m",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[91mMethodError: \u001b[0mCannot `convert` an object of type \u001b[92mInt64\u001b[39m\u001b[0m to an object of type \u001b[91mArray{Int64,2}\u001b[39m\u001b[39m\n\u001b[91m\u001b[0mClosest candidates are:\u001b[39m\n\u001b[91m\u001b[0m  convert(::Type{T}, \u001b[91m::AbstractArray\u001b[39m) where T<:Array at array.jl:554\u001b[39m\n\u001b[91m\u001b[0m  convert(::Type{T}, \u001b[91m::T\u001b[39m) where T<:AbstractArray at abstractarray.jl:14\u001b[39m\n\u001b[91m\u001b[0m  convert(::Type{T}, \u001b[91m::LinearAlgebra.Factorization\u001b[39m) where T<:AbstractArray at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.5/LinearAlgebra/src/factorization.jl:55\u001b[39m\n\u001b[91m\u001b[0m  ...\u001b[39m",
-      "",
-      "Stacktrace:",
-      " [1] setindex! at ./array.jl:849 [inlined]",
-      " [2] hvcat_fill(::Array{Array{Int64,2},2}, ::Tuple{Int64,Int64,Int64}) at ./abstractarray.jl:1797",
-      " [3] typed_hcat(::Type{Array{Int64,2}}, ::Int64, ::Int64, ::Int64) at ./abstractarray.jl:1365",
-      " [4] top-level scope at In[99]:1",
-      " [5] include_string(::Function, ::Module, ::String, ::String) at ./loading.jl:1091"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Any[1, 2, 3]"
      ]
     }
    ],
    "source": [
-    "a = Array{Int64, 2}[5 4 3]\n",
-    "print(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4-element Array{Array{Int64,2},1}:\n",
-       " [1 2]\n",
-       " [1 4]\n",
-       " [2 3]\n",
-       " [3 4]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "append!([[1 2], [1 4]], [[2 3], [3 4]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1×3 Array{Int64,2}:\n",
-       " 1  2  3"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sort(hcat([1, 3]..., [2]...), dims=2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2×2 Array{Int64,2}:\n",
-       " 2  3\n",
-       " 3  4"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "convert(Array{Int64, 2}, [[2 3]; [3 4]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "true"
-      ],
-      "text/plain": [
-       "true"
-      ]
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[[[2, 3], [3, 4]]; [[1 2], [1 4]]] == [[2,3], [3,4], [1 2], [1 4]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "[$1$, $2$]"
-      ],
-      "text/plain": [
-       "2-element Array{Int64,1}:\n",
-       " 1\n",
-       " 2"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sort([2,1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "$1$"
-      ],
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 95,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "length([1])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 96,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "$2$"
-      ],
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 96,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "length([1,2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "true"
-      ],
-      "text/plain": [
-       "true"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[[0 1; 1 0; 0 -1] ; [3 5]] == [0 1; 1 0 ; 0 -1; 3 5]"
+    "hi = []\n",
+    "append!(hi, [1,2,3])\n",
+    "print(hi)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "opponent-sleeve",
    "metadata": {},
    "outputs": [],
    "source": []
